{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 78,
  "lineage": "32fde65d-42ae-1a68-3b3f-2e1b3be79d9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:internet-gateway/igw-058f37dcba09c7bd3",
            "id": "igw-058f37dcba09c7bd3",
            "owner_id": "961390469458",
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalancer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961390469458:loadbalancer/app/loadbalancer1/45bd912aba3c3754",
            "arn_suffix": "app/loadbalancer1/45bd912aba3c3754",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalancer1-1153500410.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:961390469458:loadbalancer/app/loadbalancer1/45bd912aba3c3754",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalancer1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-029eb57a85faf65c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04860a088cfa282b4"
              },
              {
                "subnet_id": "subnet-07dc671b977c1edf1"
              }
            ],
            "subnets": [
              "subnet-04860a088cfa282b4",
              "subnet-07dc671b977c1edf1"
            ],
            "vpc_id": "vpc-04c18f882080f21db",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.publicsubnet1",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ASG_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961390469458:listener/app/loadbalancer1/45bd912aba3c3754/47367910a6bfca40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:961390469458:targetgroup/loadbalancer1/1b0cac81694581ad",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:961390469458:listener/app/loadbalancer1/45bd912aba3c3754/47367910a6bfca40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:961390469458:loadbalancer/app/loadbalancer1/45bd912aba3c3754",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.loadbalancer1",
            "aws_lb_target_group.loadbalancer1",
            "aws_security_group.sg1",
            "aws_subnet.publicsubnet1",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "loadbalancer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:961390469458:targetgroup/loadbalancer1/1b0cac81694581ad",
            "arn_suffix": "targetgroup/loadbalancer1/1b0cac81694581ad",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:961390469458:targetgroup/loadbalancer1/1b0cac81694581ad",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "loadbalancer1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:route-table/rtb-0a3d98be38751ab27",
            "id": "rtb-0a3d98be38751ab27",
            "owner_id": "961390469458",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "routetable"
            },
            "tags_all": {
              "Name": "routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f577a0104252fd06",
            "route_table_id": "rtb-0a3d98be38751ab27",
            "subnet_id": "subnet-04860a088cfa282b4"
          },
          "dependencies": [
            "aws_route_table.route",
            "aws_subnet.publicsubnet1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adae12b71f692e14",
            "route_table_id": "rtb-0a3d98be38751ab27",
            "subnet_id": "subnet-07dc671b977c1edf1"
          },
          "dependencies": [
            "aws_route_table.route",
            "aws_subnet.publicsubnet2",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Databasesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:security-group/sg-0195ac9d1e7259d48",
            "description": "allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0195ac9d1e7259d48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029eb57a85faf65c6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Databasesg",
            "name_prefix": "",
            "owner_id": "961390469458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "databasesg"
            },
            "tags_all": {
              "Name": "databasesg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg1",
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:security-group/sg-029eb57a85faf65c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029eb57a85faf65c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240203184145634900000001",
            "name_prefix": "terraform-",
            "owner_id": "961390469458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "websg"
            },
            "tags_all": {
              "Name": "websg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Datapvtsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:subnet/subnet-0f241fd56cbb52a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f241fd56cbb52a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961390469458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Datasubnet1"
            },
            "tags_all": {
              "Name": "Datasubnet1"
            },
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Datapvtsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:subnet/subnet-06b6c2c16e8e63cff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b6c2c16e8e63cff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961390469458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "datasubnet2"
            },
            "tags_all": {
              "Name": "datasubnet2"
            },
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apppvtsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:subnet/subnet-0bedc0b32228a31a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bedc0b32228a31a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961390469458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "appsubnet1"
            },
            "tags_all": {
              "Name": "appsubnet1"
            },
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apppvtsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:subnet/subnet-07f27a9c17af5e42b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f27a9c17af5e42b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961390469458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "appsubnet2"
            },
            "tags_all": {
              "Name": "appsubnet2"
            },
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:subnet/subnet-04860a088cfa282b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04860a088cfa282b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961390469458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "websubnet1"
            },
            "tags_all": {
              "Name": "websubnet1"
            },
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:subnet/subnet-07dc671b977c1edf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dc671b977c1edf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961390469458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "websubnet2"
            },
            "tags_all": {
              "Name": "websubnet2"
            },
            "vpc_id": "vpc-04c18f882080f21db"
          },
          "dependencies": [
            "aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:961390469458:vpc/vpc-04c18f882080f21db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a92bdb0abeb070cb",
            "default_route_table_id": "rtb-08f2e71cbe5705de5",
            "default_security_group_id": "sg-0b9408825ad280788",
            "dhcp_options_id": "dopt-0fbd50505da3d0396",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04c18f882080f21db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f2e71cbe5705de5",
            "owner_id": "961390469458",
            "tags": {
              "Name": "demovpc"
            },
            "tags_all": {
              "Name": "demovpc"
            }
          }
        }
      ]
    }
  ]
}